name:           text-format
version:        0.3.1.1
license:        BSD3
license-file:   LICENSE
homepage:       https://github.com/bos/text-format
bug-reports:    https://github.com/bos/text-format/issues
category:       Text
author:         Bryan O'Sullivan <bos@serpentine.com>
maintainer:     Bryan O'Sullivan <bos@serpentine.com>
stability:      experimental
tested-with:    GHC == 8.6.5
synopsis:       Text formatting
cabal-version:  >= 1.8
build-type:     Simple
description:
    A text formatting library optimized for both ease of use and high
    performance.

extra-source-files:
    README.markdown
    benchmarks/Makefile
    benchmarks/*.c
    benchmarks/*.hs

flag developer
  description: operate in developer mode
  default: False
  manual: True

library
  exposed-modules:
    Data.Text.Format
    Data.Text.Buildable
    Data.Text.Format.Params
    Data.Text.Format.Types
    Data.Text.Format.Types.Internal

  other-modules:
    Data.Text.Format.Functions
    Data.Text.Format.Int

  build-depends:
    array,
    base == 4.*,
    ghc-prim,
    old-locale,
    text >= 0.11.0.8,
    time,
    transformers

  if flag(developer)
    ghc-options: -Werror
    ghc-prof-options: -auto-all

  ghc-options: -Wall

  cpp-options: -DINTEGER_GMP

  build-depends: integer-gmp >= 0.2


source-repository head
  type:     git
  location: https://github.com/odr/text-format
